src-ken&y/objects/Product_Group__c.object
<CustomObject>
    <customHelpPage>HelpProductGroup</customHelpPage>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Used to join product group to company at data load</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Product Groups</relationshipLabel>
        <relationshipName>Product_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Product Group is used for Facility Assignment</description>
        <label>Facility Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Code__c</fullName>
        <description>Code to join this product group to the proper location in the product hierarchy</description>
        <inlineHelpText>Code that joins this product group to the correct location in the product hierarchy.</inlineHelpText>
        <label>Hierarchy Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Hierarchy link to this Product Group</description>
        <inlineHelpText>The hierarchy to which the group belongs.</inlineHelpText>
        <label>Hierarchy</label>
        <referenceTo>Hierarchy__c</referenceTo>
        <relationshipLabel>Product Groups</relationshipLabel>
        <relationshipName>Product_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique key for the Product Group</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>